<resources>
    <string name="app_name">CargoLink</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">You don\'t have an account?</string>
    <string name="registerNow">Register now</string>
    <string name="register">Register</string>
    <string name="sender">Sender</string>
    <string name="driver">Driver</string>
    <string name="userType">You will be:</string>

    <string name="firstNameUser">First Name</string>
    <string name="lastNameUser">Last Name</string>
    <string name="emailUser">Email</string>
    <string name="passwordUser">Password</string>

    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="editProfile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="changeEmail">Change email</string>
    <string name="changePassword">Change password</string>

    <string name="hello">Hello</string>
    <string name="recentOrders">Recent orders</string>
    <string name="newOrder">New order</string>
    <string name="ordersInProgress">Orders in progress</string>
    <string name="backBtn">Back</string>
    <string name="addNewOrder">Add New Order</string>
    <string name="toReceiver">Receiver</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="order">Order</string>
    <string name="orderFromAddress">Address From</string>
    <string name="orderToAddress">Address To</string>
    <string name="senderPhone">Phone number of sender</string>
    <string name="receiverPhone">Phone number of receiver</string>
    <string name="orderWeight">Weight of your order (kg)</string>
    <string name="orderPrice">Price</string>
    <string name="ordersPrice">Order price</string>
    <string name="totalPrice">Total price</string>
    <string name="weight">Weight (kg)</string>
    <string name="makeAnOffer">Make an offer</string>
    <string name="viewOffers">View offers</string>
    <string name="orderStatus">Status</string>
    <string name="acceptOffer">Accept offer</string>
    <string name="confirmDelivered">Confirm delivered</string>
    <string name="callReceiver">Call Receiver</string>
    <string name="review">Leave a review</string>
    <string name="rating">Rating (1 to 5)</string>

    <string name="deliveryDate">Delivery date</string>
    <string name="deliveryPrice">Delivery price</string>
</resources>