<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.NewOrderFragment">

    <LinearLayout
        android:id="@+id/headerNewOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/addOrderBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/backBtn"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/addOrderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/addNewOrder"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="textStart"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerNewOrder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/orderReceiver"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_margin="16sp"
                android:autofillHints="name"
                android:hint="@string/toReceiver"
                android:inputType="text" />

            <EditText
                android:id="@+id/orderName"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_margin="16sp"
                android:autofillHints="name"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/orderDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:autofillHints="name"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="50sp" />

            <EditText
                android:id="@+id/orderFromAddress"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_margin="16sp"
                android:inputType="textPostalAddress"
                android:autofillHints="address"
                android:hint="@string/orderFromAddress"/>

            <EditText
                android:id="@+id/orderToAddress"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:inputType="textPostalAddress"
                android:layout_margin="16sp"
                android:autofillHints="address"
                android:hint="@string/orderToAddress"/>

            <EditText
                android:id="@+id/senderPhone"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:inputType="phone"
                android:layout_margin="16sp"
                android:autofillHints="phone number"
                android:hint="@string/senderPhone"/>

            <EditText
                android:id="@+id/receiverPhone"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:inputType="phone"
                android:layout_margin="16sp"
                android:autofillHints="phone number"
                android:hint="@string/receiverPhone" />


            <EditText
                android:id="@+id/orderWeight"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:inputType="numberDecimal"
                android:layout_margin="16sp"
                android:autofillHints="phone number"
                android:hint="@string/orderWeight"/>

            <EditText
                android:id="@+id/orderPrice"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_margin="16sp"
                android:autofillHints="number"
                android:hint="@string/orderPrice"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/addOrderBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:backgroundTint="@color/red"
                android:padding="10sp"
                android:text="@string/order"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>