<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:text="@string/register"
        android:textAlignment="textStart"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstNameUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:inputType="text"
        android:textColor="@color/red"
        android:hint="@string/firstNameUser"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/lastNameUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:inputType="text"
        android:textColor="@color/red"
        android:hint="@string/lastNameUser"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/emailUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/red"
        android:hint="@string/emailUser"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:inputType="textPassword"
        android:textColor="@color/red"
        android:hint="@string/passwordUser"
        android:autofillHints="password"/>

    <RadioGroup
        android:id="@+id/userTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userType"
            android:textSize="16sp"
            android:layout_margin="5sp"/>

        <RadioButton
            android:id="@+id/studentRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender" />

        <RadioButton
            android:id="@+id/teacherRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver" />

    </RadioGroup>

    <Button
        android:id="@+id/addUserBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red"
        android:padding="13dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textAllCaps="true"/>



</LinearLayout>