<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:text="@string/login"
            android:textColor="@color/red"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="25sp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:autofillHints="emailAddress"/>

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="25sp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:autofillHints="password"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25sp"
            android:backgroundTint="@color/red"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="10sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noAccount"
            android:textColor="@color/red"
            android:gravity="center"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/registerNow"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>