<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    app:contentPadding="10sp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_margin="5sp"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:id="@+id/recentOrdersCard"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/orderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/orderDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/orderDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="5sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/orderFromAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderFromAddress"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/orderFromAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_margin="5sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/orderToAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderToAddress"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/orderToAddressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_margin="5sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/orderWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_margin="5sp"/>

            <TextView
                android:id="@+id/orderWeightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:textSize="14sp"
                android:layout_margin="5sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/makeAnOfferBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makeAnOffer"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:layout_marginBottom="5sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>