<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SenderHomeFragment">

    <LinearLayout
        android:id="@+id/helloText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/hello"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/newOrderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newOrder"
            android:backgroundTint="@color/red"
            android:layout_marginEnd="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/ordersProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helloText"
        android:text="@string/ordersInProgress"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ordersInProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_below="@+id/ordersProgressText"/>


</RelativeLayout>